# BenaLed

BenaLed/: app.js  index.html  style.css
BenaLed/ideia/: index_panel_swap_locked_v3.html  style_panel_swap_locked_v3.css  tree3d_panel_swap_locked_v3.js
BenaLed_Esp/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
BenaLed_Esp/main/: CMakeLists.txt  app_config.h  main.c
BenaLed_Esp/main/lib/: dns_lib.c  httpd.c  webserver.c  wifi_lib.c
BenaLed_Esp/main/lib/include/: dns.h  dns_lib.h  httpd.h  webserver.h  wifi_lib.h
BenaLed_Esp/main/tasks/: dns_task.c  matrix_task.c  oled_task.c  ws2812b_encoder.c  ws2812b_encoder.h
BenaLed_Esp/main/tasks/include/: dns_task.h  matrix_task.h  oled_task.h
BenaLed_Esp/spiffs/: admin.html  app.js  index.html  style.css
